adding projects page and notes about github error to readme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <img src="/assets/eric1.jpg">
     </div>
     <div class="col-md-8">
-      <div class="lead">Hi, I'm Eric Albright and I am a data systems analyst. I help clients organize, understand, and share their data.</div>
+      <div class="lead">Hi, I'm Eric Albright and I am a data systems analyst from Portland. I help clients organize, understand, and share their data.</div>
 
       <div>Most recently I've been working in the transportation industry. I've worked with transit agencies to evaluate service performance and share data in open formats, and I've helped traffic agencies collect and use traffic data to inform traffic control changes.</div>
     </div>
